--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -18,9 +18,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": [ 
+      "@types/jest"
+    ]
   },
   "include": [
-    "src"
+    "src/*"
   ]
 }
